# VibeStats

./: .gitignore  Cargo.toml  LICENSE  README.md  config.example.toml
src/: autostart.rs  config.rs  dashboard.rs  gui.rs  icon_data.rs  main.rs  models.rs  notifier.rs  parser.rs  scheduler.rs  stats.rs  storage.rs
